--- a/.github/workflows/pr-generate-protobuf.yml
+++ b/.github/workflows/pr-generate-protobuf.yml
@@ -1,23 +1,25 @@
-name: "Pull Request - Check Protobuf - go"
+name: "Pull Request - Check Protobuf - Go"
 
 on:
   pull_request:
     paths:
-      - 'proto/**.proto'
+      - 'proto/**/*.proto'
+
 jobs:
   generate-protobuf-go:
-    runs-on: ubuntu-latests
+    runs-on: ubuntu-latest
     steps:
-      - name: checkout source
+      - name: Checkout source
         uses: actions/checkout@v3
         with:
           ref: ${{ github.head_ref }}
+          
       - name: Install Go
         uses: actions/setup-go@v3
         with:
-          go-version: '1.20' # or latests
-          check-out: false
+          go-version: '1.20' # ou a última versão
           cache: true
+
       - name: Generate Go Source
         shell: bash
         run: |
