--- a/.github/workflows/pr-generate-protobuf.yml
+++ b/.github/workflows/pr-generate-protobuf.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version: '1.20' # ou a última versão
-          cache: true
+          cache: false
 
       - name: Generate Go Source
         shell: bash
