--- a/.github/workflows/push-generate-protobuf-go.yml
+++ b/.github/workflows/push-generate-protobuf-go.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           go-version: '1.20'  # or latest go version
           check-latest: false
-          cache: true
+          cache: false
       - name: Generate Go Source
         shell: bash
         run: |
